--- a/roles/gamlab_dev_workstation/tasks/macos-buildenv-interactive.yml
+++ b/roles/gamlab_dev_workstation/tasks/macos-buildenv-interactive.yml
@@ -7,3 +7,8 @@
     - vscodium
     - firefox
     - google-chrome
+    - dbeaver-community
+    - goland
+    - datagrip
+    - android-studio
+    - docker
