--- a/roles/apt/tasks/unattended-upgrades.yml
+++ b/roles/apt/tasks/unattended-upgrades.yml
@@ -131,6 +131,28 @@
     create: true
   when: apt_auto_update
 
+- name: Ensure GitLab runner repo is included in unattended upgrades
+  become: true
+  ansible.builtin.lineinfile:
+    path: /etc/apt/apt.conf.d/50unattended-upgrades
+    regexp: '^/?/? *"o=packages.gitlab.com/runner/gitlab-runner,a=\${distro_codename},n=\${distro_codename},l=gitlab-runner,c=main";'
+    line: '        "o=packages.gitlab.com/runner/gitlab-runner,a=${distro_codename},n=${distro_codename},l=gitlab-runner,c=main";'
+    insertafter: '^Unattended-Upgrade::Origins-Pattern {'
+    state: present
+    create: true
+  when: apt_auto_update
+
+- name: Ensure GitLab EE repo is included in unattended upgrades
+  become: true
+  ansible.builtin.lineinfile:
+    path: /etc/apt/apt.conf.d/50unattended-upgrades
+    regexp: '^/?/? *"o=packages.gitlab.com/gitlab/gitlab-ee,a=\${distro_codename},n=\${distro_codename},l=gitlab-ee,c=main";'
+    line: '        "o=packages.gitlab.com/gitlab/gitlab-ee,a=${distro_codename},n=${distro_codename},l=gitlab-ee,c=main";'
+    insertafter: '^Unattended-Upgrade::Origins-Pattern {'
+    state: present
+    create: true
+  when: apt_auto_update
+
 # Configure unattended upgrades general settings
 - name: Ensure unattended upgrades notification e-mail is set
   become: true
