containers: do not enable live-restore by default

--- a/roles/containers/defaults/main.yml
+++ b/roles/containers/defaults/main.yml
@@ -3,4 +3,5 @@ docker_autoclean: false
 # Setting this to true prevents the playbook to set a sane log default
 docker_manual_log_config: false
 
-docker_live_restore_enabled: true
+# Live restores might disrupt some services, like the internal DNS
+docker_live_restore_enabled: false
