macos_ci: support opencore host/VM reduced timeout

--- a/roles/macos_ci/defaults/main.yaml
+++ b/roles/macos_ci/defaults/main.yaml
@@ -1,1 +1,5 @@
 macos_login_banner: CI/CD build machine - DO NOT USE
+
+macos_is_opencore: false
+opencore_timeout: 2
+opencore_efi_disk: "/dev/disk0s1"
