server_hardening: add apt security options

--- a/roles/server_hardening/defaults/main.yaml
+++ b/roles/server_hardening/defaults/main.yaml
@@ -1,6 +1,8 @@
+# Secure SSH
 ssh_hardening: true
 ssh_root_key_access: true
 
+# Firewall
 fw_safe_mgmt4: []
 fw_ssh_port: 22
 fw_public_services: []
