server_hardening: enable new tasks apt, banner, cleanup

--- a/roles/server_hardening/tasks/main.yaml
+++ b/roles/server_hardening/tasks/main.yaml
@@ -18,3 +18,13 @@
 - name: nftables firewall
   include_tasks: nftables.yaml
   when: fw_nftables
+
+- name: APT
+  include_tasks: apt.yaml
+  when: ansible_os_family == 'Debian'
+
+- name: banner
+  include_tasks: banner.yaml
+
+- name: cleanup
+  include_tasks: cleanup.yaml
