server_hardening: harden cron

--- a/roles/server_hardening/tasks/main.yaml
+++ b/roles/server_hardening/tasks/main.yaml
@@ -23,6 +23,10 @@
   include_tasks: nftables.yaml
   when: fw_nftables
 
+- name: secure cron files
+  include_tasks: cron.yaml
+  when: secure_cron
+
 - name: core dumps
   include_tasks: coredumps.yaml
   when: disable_core_dumps
