server_hardening: add defaults for core dumps and cron

--- a/roles/server_hardening/defaults/main.yaml
+++ b/roles/server_hardening/defaults/main.yaml
@@ -20,6 +20,10 @@ fw_whitelists: []
 rkhunter_enabled: false
 
 
+# Secure machine
+disable_core_dumps: false
+secure_cron: false
+
 molly_guard: true
 banner_show_ssh: false
 banner_text: |
