--- a/roles/apt/tasks/unattended-upgrades.yml
+++ b/roles/apt/tasks/unattended-upgrades.yml
@@ -87,16 +87,17 @@
     create: true
   when: apt_auto_update and ansible_distribution == 'Ubuntu'
 
+# Custom repos
 - name: Ensure Netsplit repo is included in unattended upgrades
   become: true
   ansible.builtin.lineinfile:
     path: /etc/apt/apt.conf.d/50unattended-upgrades
-    regexp: '^/?/? *"o=Netsplit,n=\${distro_codename},c=";'
-    line: '        "o=Netsplit,n=${distro_codename},c=";'
+    regexp: '^/?/? *"o=Netsplit,'
+    line: '        "site=deb.netsplit.it";'
     insertafter: '^Unattended-Upgrade::Origins-Pattern {'
     state: present
     create: true
-  when: apt_auto_update
+  when: apt_auto_update and 'netsplit' in apt_auto_update_repos
 
 - name: Ensure Grafana repo is included in unattended upgrades
   become: true
@@ -107,7 +108,7 @@
     insertafter: '^Unattended-Upgrade::Origins-Pattern {'
     state: present
     create: true
-  when: apt_auto_update
+  when: apt_auto_update and 'grafana' in apt_auto_update_repos
 
 - name: Ensure Postgres repo is included in unattended upgrades
   become: true
@@ -118,7 +119,7 @@
     insertafter: '^Unattended-Upgrade::Origins-Pattern {'
     state: present
     create: true
-  when: apt_auto_update
+  when: apt_auto_update and 'postgres' in apt_auto_update_repos
 
 - name: Ensure Docker repo is included in unattended upgrades
   become: true
@@ -129,7 +130,7 @@
     insertafter: '^Unattended-Upgrade::Origins-Pattern {'
     state: present
     create: true
-  when: apt_auto_update
+  when: apt_auto_update and 'docker' in apt_auto_update_repos
 
 - name: Ensure GitLab runner repo is included in unattended upgrades
   become: true
@@ -140,7 +141,7 @@
     insertafter: '^Unattended-Upgrade::Origins-Pattern {'
     state: present
     create: true
-  when: apt_auto_update
+  when: apt_auto_update and 'gitlab' in apt_auto_update_repos
 
 - name: Ensure GitLab EE repo is included in unattended upgrades
   become: true
@@ -151,7 +152,7 @@
     insertafter: '^Unattended-Upgrade::Origins-Pattern {'
     state: present
     create: true
-  when: apt_auto_update
+  when: apt_auto_update and 'gitlab' in apt_auto_update_repos
 
 # Configure unattended upgrades general settings
 - name: Ensure unattended upgrades notification e-mail is set
