--- a/roles/rtsp_simple_server/tasks/main.yaml
+++ b/roles/rtsp_simple_server/tasks/main.yaml
@@ -9,9 +9,11 @@
 
     - name: Add Netsplit repository
       become: true
-      apt_repository:
-        filename: "netsplit"
-        repo: "deb [trusted=yes] https://deb.netsplit.it/{{ ansible_distribution_release }} ./"
+      copy:
+        dest: "/etc/apt/sources.list.d/netsplit.list"
+        content: |
+          deb [trusted=yes] https://deb.netsplit.it/{{ ansible_distribution_release }} ./
+          deb [trusted=yes] https://deb.netsplit.it/selfcontained ./
 
     - name: Install rtsp-simple-server package
       become: true
