server_hardening: use prohibit-password in place of deprecated option for SSH

--- a/roles/server_hardening/tasks/ssh.yaml
+++ b/roles/server_hardening/tasks/ssh.yaml
@@ -56,7 +56,7 @@
       lineinfile:
         path: /etc/ssh/sshd_config
         regexp: '^#?PermitRootLogin'
-        line: 'PermitRootLogin without-password'
+        line: 'PermitRootLogin prohibit-password'
         insertbefore: ^Match
         firstmatch: true
       notify: "Restart SSH server"
