--- a/roles/server_hardening/tasks/iptables.yaml
+++ b/roles/server_hardening/tasks/iptables.yaml
@@ -11,6 +11,7 @@
           - arptables
           - ebtables
           - ipset
+          - conntrack
 
     - name: Flush nftables
       become: true
