--- a/roles/server_hardening/tasks/nftables.yaml
+++ b/roles/server_hardening/tasks/nftables.yaml
@@ -27,6 +27,7 @@
       apt:
         pkg:
           - nftables
+          - conntrack
         state: present
 
     - name: Remove iptables config
