server_hardening: small fixes

--- a/roles/server_hardening/tasks/rkhunter.yaml
+++ b/roles/server_hardening/tasks/rkhunter.yaml
@@ -10,6 +10,7 @@
     dest: /etc/default/rkhunter
     regexp: '^CRON_DAILY_RUN='
     line: 'CRON_DAILY_RUN="yes"'
+    create: true
 
 - name: Configure rkhunter to run daily
   become: true
@@ -17,3 +18,4 @@
     dest: /etc/default/rkhunter
     regexp: '^APT_AUTOGEN='
     line: 'APT_AUTOGEN="yes"'
+    create: true
